# C-coded_academy-deyan-nedyalkov-S04

./: .gitignore  README.md
c_programming/Course_Project_1/: README.md  database.db
c_programming/Course_Project_mentor_2/: README.md
c_programming/Project-Jhivko-StarCraft-2-1/: README.md
c_programming/Project-Jhivko-StarCraft-2-1/old/StarCraft/: CMakeLists.txt  build.sh  valgrind_test.sh
c_programming/Project-Jhivko-StarCraft-2-1/old/StarCraft/include/: BattleCruiser.h  BattleField.h  ErrorHandler.h  TerranTurn.h  Viking.h
c_programming/Project-Jhivko-StarCraft-2-1/old/StarCraft/src/: BattleCruiser.c  BattleField.c  ErrorHandler.c  ProtossShields.c  ProtossTurn.c  TerranTurn.c  Vector.c  Viking.c
c_programming/misc_info/: README.md  count_lines_optimized.c  date_1.c  date_output.c  enum_struct_chooser.c  inBitsPrint.c  struct_for_working_with_bits.c
linux_bash/05_17_11_2022/: 17_11_2022_lecture_5_task_1.sh  Lecture.sh
linux_bash/06_26_11_2022/: ShaSum.sh  case.sh  case_2.sh  fileFlags.sh  homework.sh  if_else_conditions.sh  quickIf.sh  regexLike.sh
linux_bash/07_13_01_2022/: add_students_to.sh  array.sh  buble_sort.sh  check.sh  declare_func.sh  greet_hello.sh  hello.sh  itter_trour_array2.sh  itterating_troug_array.sh  local_global_var.sh  nested_func.sh  null_read_only.sh  read_only.sh  recursion.sh  rename_files.sh  rename_recursively.sh  return_value_func.sh  slice_array.sh  two_dimentional_array.sh  var_threated_like_diferent.sh
linux_bash/08_20_1_2022/: POSIX-REG-EX.sh  activities.sh  grep_1.sh  grep_options.sh  grep_with_pipe.sh  ne.txt  (+3 more)
(+522 files in other folders)
